test/typeError2.slq
// args: --run

def main(){
	def foo(){
		c:=H(0:ğ”¹);
		x:=1:int[3];
		if true{
			measure(x);
			x:=0:int[3];
			x[0]:=H(x[0]);
		}
		return (c,x);
	}
	return H(foo()); // error
}
